# api/config/routes.rb
@@ -34,8 +34,11 @@ Rails.application.routes.draw do
       resources :followings, only: %i[index], module: :users
     end
 
-    resources :what_to_discard_problems, only: %i[index show update destroy] do
+    resources :what_to_discard_problems, only: %i[index show create update destroy] do
       resources :likes, only: %i[create destroy], module: :what_to_discard_problems
+      resources :comments, module: :what_to_discard_problems, only: %i[index create] do
+        resources :replies, only: %i[index], controller: :comments, action: :replies
+      end
     end
 
     post "/graphql", to: "graphql#execute"
